Modify file ".gitignore"
File ".gitignore" now won't consider files .pvtu, .vtu and .log in the
folder "python_wrapper".

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ python_wrapper/*.so
 python_wrapper/*cpp
 python_wrapper/*.h
 python_wrapper/build/*
+python_wrapper/*.pvtu
+python_wrapper/*.vtu
+python_wrapper/*.log
