--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ python_wrapper/multiple_grids/*.log
 python_wrapper/multiple_grids/*.pvtu
 python_wrapper/multiple_grids/*.vt?
 opt_base/build/*
+opt_IO/build/*
