--- a/python_wrapper/multiple_grids/PABLO.ini
+++ b/python_wrapper/multiple_grids/PABLO.ini
@@ -1,5 +1,5 @@
 [PABLO]
-NumberOfGrids = 3
-Anchors = 0, 0, 0; 0.25, 0.25, 0; 0.75, 0.75, 0
-Edges = 1, 0.5, 0.25
-Refinements = 4, 7, 6
+NumberOfGrids = 2
+Anchors = 0, 0, 0; 0.25, 0.25, 0
+Edges = 1, 0.5
+Refinements = 5, 7
