--- a/python_wrapper/multiple_grids/PABLO.ini
+++ b/python_wrapper/multiple_grids/PABLO.ini
@@ -1,5 +1,5 @@
 [PABLO]
-NumberOfGrids = 2
-Anchors = 0, 0, 0; 0.25, 0.25, 0
-Edges = 1, 0.5
-Refinements = 7, 6
+NumberOfGrids = 5
+Anchors = 0, 0, 0; 0.25, 0.25, 0; 0.5, 0.25, 0; 0.25, 0.5, 0; 0.5, 0.5, 0
+Edges = 1, 0.25, 0.25, 0.25, 0.25
+Refinements = 7, 5, 5, 5, 5
