--- a/python_wrapper/multiple_grids/PABLO.ini
+++ b/python_wrapper/multiple_grids/PABLO.ini
@@ -1,5 +1,21 @@
 [PABLO]
-NumberOfGrids = 5
-Anchors = 0, 0, 0; 0.25, 0.25, 0; 0.5, 0.25, 0; 0.25, 0.5, 0; 0.5, 0.5, 0
-Edges = 1, 0.25, 0.25, 0.25, 0.25
-Refinements = 7, 5, 5, 5, 5
+NumberOfGrids = 2
+Anchors = 0, 0, 0; 0.25, 0.25, 0
+Edges = 1, 0.5
+Refinements = 8, 9
+[PROBLEM]
+BackgroundPenalization = 1.0e16
+ForegroundPenalization = 0.0
+# Flag to decide if try the case where the two grids are overlapped or not.
+# -------------------
+# |   A   |A|   B   |
+# |       |+|       | ----> overlapped
+# |       |B|       |
+# ------------------
+#
+# ------------------
+# |   ---------    |
+# |   |   B    | A | ----> not overlapped
+# |   ---------    |
+# -----------------
+Overlapping = False
