--- a/python_wrapper/multiple_grids/PABLO.ini
+++ b/python_wrapper/multiple_grids/PABLO.ini
@@ -5,7 +5,7 @@ Edges = 1, 0.5
 Refinements = 8, 9
 [PROBLEM]
 BackgroundPenalization = 1.0e16
-ForegroundPenalization = 0.0
+ForegroundPenalization = 1.0e16
 # Flag to decide if try the case where the two grids are overlapped or not.
 # -------------------
 # |   A   |A|   B   |
