Modify file ".gitignore"
The file ".gitignore" now contains the following folders:
- python_wrapper/multiple_grids/block_matrices/doc/
- python_wrapper/multiple_grids/block_matrices/log/

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ python_wrapper/multiple_grids/*.dat
 python_wrapper/multiple_grids/*.txt
 python_wrapper/multiple_grids/*.gp
 python_wrapper/multiple_grids/*.swp
+python_wrapper/multiple_grids/block_matrices/doc/*
+python_wrapper/multiple_grids/block_matrices/log/*
