Modify file "python_wrapper/multiple_grids/block_matrices/config/PABLO.ini"
Modified the number of grids and the corresponding other parameters to have
a number of grids equal to 4.

--- a/python_wrapper/multiple_grids/block_matrices/config/PABLO.ini
+++ b/python_wrapper/multiple_grids/block_matrices/config/PABLO.ini
@@ -1,8 +1,8 @@
 [PABLO]
-NumberOfGrids = 2
-Anchors = 0, 0, 0; 0.25, 0.25, 0
-Edges = 1, 0.5
-Refinements = 8, 9
+NumberOfGrids = 4
+Anchors = 0, 0, 0; 0.25, 0.25, 0; 0, 0, 0; 0.25, 0.25, 0
+Edges = 1, 0.5, 1, 0.5
+Refinements = 8, 9, 8, 9
 [PROBLEM]
 BackgroundPenalization = 1.0e16
 ForegroundPenalization = 1.0e16
