--- a/python_wrapper/multiple_grids/block_matrices/config/PABLO.ini
+++ b/python_wrapper/multiple_grids/block_matrices/config/PABLO.ini
@@ -1,8 +1,8 @@
 [PABLO]
-NumberOfGrids = 2
-Anchors = 0, 0, 0; 0.25, 0.25, 0
-Edges = 1, 0.5
-Refinements = 6, 6
+NumberOfGrids = 5
+Anchors = 0, 0, 0; 0.25, 0.25, 0; 0.5, 0.25, 0; 0.25, 0.5, 0; 0.5, 0.5, 0
+Edges = 1, 0.25, 0.25, 0.25, 0.25
+Refinements = 6, 6, 6, 6, 6
 [PROBLEM]
 BackgroundPenalization = 1.0e16
 ForegroundPenalization = 1.0e16
