--- a/python_wrapper/multiple_grids/block_matrices/config/PABLO.ini
+++ b/python_wrapper/multiple_grids/block_matrices/config/PABLO.ini
@@ -1,13 +1,13 @@
 [PABLO]
-NumberOfGrids = 5
-Anchors = 0, 0, 0; 0, 0, 0; 0.75, 0, 0; 0, 0.75, 0; 0.4, 0.4, 0
-Edges = 1, 0.25, 0.25, 0.25, 0.5
-Refinements = 7, 7, 7, 7, 7
+NumberOfGrids = 2
+Anchors = 0, 0, 0; 0.25, 0.25, 0
+Edges = 1, 0.5
 # \"Refinements\" must be +1 on the level we really want to obtain. So, for
 # exampke, to reach level 5 of refinement, we must insert 6.
 # TODO: understand the reason, because in line "271" of "main.py", if we change
 # \"xrange(1, refinement_levels)\" with \"xrange(1, refinement_levels + 1)\", 
 # we obtain \"MPI_ABORT\".
+Refinements = 10, 10
 [PROBLEM]
 BackgroundPenalization = 1.0e16
 ForegroundPenalization = 1.0e16
